# wildfire-data-pipeline

./: .env.example  .gitignore  dvc.yaml  justfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: fires.json
docs/: research_imputation_and_quality.md
docs/superpowers/plans/: 2026-03-24-feature-channels.md
gee/: fire_detection.js  fire_weather.js  terrain_fuel.js
scripts/: download_fire_data.py  process_labels.py
src/wildfire_pipeline/: __init__.py  cli.py  config.py  feature_registry.py  logging.py
src/wildfire_pipeline/gee/: download.py  features.py  goes.py  retry.py  terrain.py  weather.py
src/wildfire_pipeline/processing/: io.py  labels.py  quality.py  validation.py
tests/: conftest.py  test_cli_commands.py  test_cli_utils.py  test_config.py  test_config_helpers.py  test_coverage_edges.py  test_feature_registry.py  test_fixtures.py  test_ml_readiness.py
tests/gee/: test_feature_download.py  test_features.py  test_goes_selection.py  test_grid_computation.py  test_terrain.py  test_weather.py
tests/processing/: test_io.py  test_labels.py  test_process_fire.py  test_quality.py  test_validation.py
