[project]
name = "wildfire-pipeline"
version = "0.1.0"
description = "Multi-source wildfire fire detection data pipeline for ML training labels"
requires-python = ">=3.11"
dependencies = [
    "earthengine-api>=1.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "scipy>=1.11",
    "structlog>=24.0",
    "tenacity>=8.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.10",
    "bandit>=1.7",
]
zarr = [
    "xarray>=2024.0",
    "zarr>=2.16",
]

[project.scripts]
wildfire = "wildfire_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wildfire_pipeline"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "N806",   # T, H, W are standard tensor dimension names in ML code
]

[tool.ruff.lint.isort]
known-first-party = ["wildfire_pipeline"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring GEE credentials (deselect with '-m not integration')",
]
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests"]
